Fixes some align issues

--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ h5 {
 }
 
 .quote {
-  font-size: 2.5em;
+  font-size: 3.5em;
   position: absolute;
   left: 10%;
   bottom: 100px;
@@ -150,13 +150,25 @@ h5 {
 
 }
 
+#structure {
+	
+	
+	
+}
 #structure > div {
+  
+  
+}
+
+.test {
   display: flex;
   justify-content: space-between;
   flex-direction: row; 
   flex-wrap: wrap;
-  
+
+
 }
+
 
 
 
@@ -171,8 +183,9 @@ h5 {
   box-sizing: box-border;
   box-shadow: 2px 2px 10px 0 #eee;
   padding: 20px;
-  width: 40%;
+  width: 50%;
   margin: 50px 5% 0 5%;
+  
 }
 
 .service-box img{
@@ -227,6 +240,15 @@ h5 {
 .schedule-table {
   margin: 0 auto 40px auto;
   font-size: 1.5em;
+
+}
+
+.table{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+
 }
 
 .schedule-table th, td {
@@ -277,6 +299,14 @@ h5 {
   align-items: flex-start;
   flex-direction: column;
   }
+.contact {
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
+}
 
 .foot h5{
   margin: 0 auto 0 auto;
@@ -298,11 +328,24 @@ h5 {
   list-style: none;
   padding: 0;
   
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  
 }
 
 .map-frame {
   height: 375px;
-  width: 60%;
+  width: 1000px;
+  height: 500px;
+  margin: 0 0 0 100px;
   
   
+}
+
+.footer-align {
+  display: flex;
+  flex-direction: rown;
+  align-items: center;
+  justify-content: space-evenly;
 }
